# Angry-Birds-2021

./: CMakeLists.txt  README.md
Data/Fonts/: license.txt
Data/Images/OtherCoolSprites/: License.txt
Data/Music/: LevelSong.ogg.sfk  License.txt
Documents/: Bird Trajectory.txt
src/: Engine.cpp  Engine.h  EngineComponents.cpp  EngineComponents.h  EngineMethods.cpp  EngineMethods.h  main.cpp
src/Game/: LevelSelectScene.cpp  LevelSelectScene.h  MainMenuScene.cpp  MainMenuScene.h
src/Game/GameObjects/: Bird.cpp  Bird.h  Block.cpp  Block.h  MusicManager.cpp  MusicManager.h  Pig.cpp  Pig.h  Poof.cpp  Poof.h  Slingshot.cpp  Slingshot.h
src/Game/Levels/: Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h  LevelBase.cpp  LevelBase.h
